add rest layer for menu items
